# homebase

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 0001_create_pay_period.sql  0002_create_budget_entries.sql  0003_add_users.sql
src/: db.rs  errors.rs  main.rs  models.rs  state.rs
src/features/: mod.rs
src/features/auth/: backend.rs  handlers.rs  mod.rs  models.rs  routes.rs  templates.rs
src/features/budget/: handlers.rs  mod.rs  models.rs  queries.rs  routes.rs  templates.rs
src/features/home/: handlers.rs  mod.rs  routes.rs
src/handlers/: budget_handlers.rs  handlers.rs  mod.rs
src/shared/: base.rs  mod.rs
src/templates/: htmx.rs  mod.rs
src/templates/layout/: base.rs  mod.rs
src/templates/pages/: budget_dashboard.rs  dashboard.rs  index.rs  mod.rs
src/templates/partials/: mod.rs  navbar.rs  render_budget_table.rs  render_entry_form.rs  sidebar.rs
