[package]
name = "finance_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
maud = { version = "0.27.0", features = ["axum"] }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
