[package]
name = "homebase"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.9"
axum-login = "0.18.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["axum"] }
password-auth = "1.0.0"
rust_decimal = "1.41.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace"] }
tower-sessions = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
